src/objects/CDA_Request__c.object
<CustomObject>
    <description>created under ER-3556</description>
    <fields>
        <fullName>Additional_Contact_Details__c</fullName>
        <description>All the contacts are saved in this field as a concatenated string e.g. FName1,LName1,Email1;FName2,LName2,Email2;</description>
        <label>Additional Contact Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Flag__c</fullName>
        <description>Provide the ability to allow the requestor to CC additional IQVIA contacts on all requestor system generated email.</description>
        <inlineHelpText>These additional contacts added will be CCed on all system generated emails</inlineHelpText>
        <label>Additional Contact Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>Used for internal purposes only</inlineHelpText>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Project- an audit for any ongoing project of the customer. Qualification- an audit to qualify/select IQVIA to provide services to the customer.</inlineHelpText>
        <label>Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awaiting_Requestor_Submission_Date__c</fullName>
        <label>Awaiting Requestor Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDA_Base_URL__c</fullName>
        <description>This is base url for email templates</description>
        <formula>LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDA Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDA_Effective_Date_String__c</fullName>
        <description>This is the CDA_Effective_Date__c to be used in CDA agreement docs in string format instead of mm/dd/yyyy.</description>
        <formula>IF (ISNULL(CDA_Effective_Date__c),&quot;&quot;, IF(MONTH(CDA_Effective_Date__c )=1, &quot;January&quot;, IF(MONTH(CDA_Effective_Date__c )=2, &quot;February&quot;, IF(MONTH(CDA_Effective_Date__c )=3, &quot;March&quot;, IF(MONTH(CDA_Effective_Date__c )=4, &quot;April&quot;, IF(MONTH(CDA_Effective_Date__c )=5, &quot;May&quot;, IF(MONTH(CDA_Effective_Date__c )=6, &quot;June&quot;, IF(MONTH(CDA_Effective_Date__c )=7, &quot;July&quot;, IF(MONTH(CDA_Effective_Date__c )=8, &quot;August&quot;, IF(MONTH(CDA_Effective_Date__c )=9, &quot;September&quot;, IF(MONTH(CDA_Effective_Date__c )=10, &quot;October&quot;, IF(MONTH(CDA_Effective_Date__c )=11, &quot;November&quot;, IF(MONTH(CDA_Effective_Date__c )=12, &quot;December&quot;, &quot;MMM&quot;)))))))))))) &amp; &quot; &quot; &amp; TEXT(DAY( CDA_Effective_Date__c )) &amp; &quot;, &quot; &amp; TEXT(YEAR (CDA_Effective_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDA Effective Date String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDA_Effective_Date__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>A date within a time frame that is 60 days prior to the current date and 90 days after the current date. if initial disclosure was more than 60 days prior to current date, Please contact the CDA Negotiator team at LegalReview-CDARequests@iqvia.com</inlineHelpText>
        <label>CDA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDA_Format__c</fullName>
        <inlineHelpText>Used to determine format of CDA agremeent needed</inlineHelpText>
        <label>CDA Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Protected Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDA_Id__c</fullName>
        <description>A unique identification number assigned to each CDA Request.</description>
        <displayFormat>CDA-{000000}</displayFormat>
        <inlineHelpText>A unique identification number assigned to each CDA Request.</inlineHelpText>
        <label>CDA Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CDA_Language__c</fullName>
        <description>Language dependent on he CDA type. updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Templates using local language are available for these specific languages. If the language you require is not available, please submit your request by email to LegalReview-CDARequests@iqvia.com.</inlineHelpText>
        <label>CDA Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDA_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Chinese (Bilingual)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDA_Source__c</fullName>
        <inlineHelpText>Select the form of template to be used:
IQVIA: indicates the IQVIA form of template.
External: indicates you are providing the Recipient’s form of template for review.</inlineHelpText>
        <label>CDA Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IQVIA</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDA_Type__c</fullName>
        <label>CDA Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QuintilesIMS_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>China &amp; Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Pacific Asia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canada &amp; US</fullName>
                    <isActive>false</isActive>
                    <label>Canada &amp; US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colaboration_Business_Line_Services__c</fullName>
        <inlineHelpText>Provide a description of the business line or services the competitor wishes to discuss as part of the collaboration which is NOT sponsor driven.</inlineHelpText>
        <label>Colaboration Business Line-Services </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Contracting_Capacity__c</fullName>
        <description>1. If “Customer” the study sponsor is not a QuintilesIMS Sponsor. 
2. If “Vendor” it is a QuintilesiMS sponsor
3. If “Collaborator” there may or may not be a study sponsor. If there is a study sponsor, identification depends if the Competitor is ready reveal</description>
        <label>Competitor Contracting Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDA_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vendor – Project / Study Specific</fullName>
                </value>
                <value>
                    <fullName>Vendor – Corporate / Enterprise</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Flag__c</fullName>
        <inlineHelpText>Checked= Competitor</inlineHelpText>
        <label>Competitor Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Originating_from_Sponsor__c</fullName>
        <inlineHelpText>Indicates if the study sponsor requested the Competitor</inlineHelpText>
        <label>Competitor Originating from Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_System_Access__c</fullName>
        <description>Will the Recipient obtain access to a QuintilesIMS System?</description>
        <label>Competitor System Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_information_disclosed_to_QI__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Provide a description of the competitor’s information which will be disclosed to IQVIA.</inlineHelpText>
        <label>Competitor info disclosed to IQVIA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cust_Legal_Entity_Address_Other__c</fullName>
        <description>Customer Legal Entity Address Other</description>
        <formula>Customer_Legal_Entity_Street_Other__c + IF(ISBLANK(Customer_Legal_Entity_Street_Other__c), &apos;&apos;, &apos;, &apos;) + Customer_Legal_Entity_City_Other__c + IF(ISBLANK(Customer_Legal_Entity_City_Other__c ), &apos;&apos;, &apos;, &apos;) + TEXT(Customer_Legal_Entity_State_Other_PL__c) + IF(ISPICKVAL(Customer_Legal_Entity_State_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos;, &apos;) + TEXT(Customer_Legal_Entity_Country_Other_PL__c) + IF(ISPICKVAL(Customer_Legal_Entity_Country_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos; &apos;) + Customer_Legal_Entity_ZipCode_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Free Text for Requestor to enter a Customer Account Address if “Other” is specified for Customer Account Name.</inlineHelpText>
        <label>Customer Legal Entity Address Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Legal_Entity_Address__c</fullName>
        <description>Customer Legal Entity Address Other</description>
        <formula>IF(OR(ISBLANK(Cust_Legal_Entity_Name__c), ISBLANK(Cust_Legal_Entity_Name__r.Complete_Address__c)), Customer_Legal_Entity_Street_Other__c + IF(ISBLANK(Customer_Legal_Entity_Street_Other__c), &apos;&apos;, &apos;, &apos;) + Customer_Legal_Entity_City_Other__c + IF(ISBLANK(Customer_Legal_Entity_City_Other__c), &apos;&apos;, &apos;, &apos;) + TEXT(Customer_Legal_Entity_State_Other_PL__c) + IF(ISPICKVAL(Customer_Legal_Entity_State_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos;, &apos;) + TEXT(Customer_Legal_Entity_Country_Other_PL__c) + IF(ISPICKVAL(Customer_Legal_Entity_Country_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos; &apos;) + Customer_Legal_Entity_ZipCode_Other__c, Cust_Legal_Entity_Name__r.Complete_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Free Text for Requestor to enter a Customer Account Address if “Other” is specified for Customer Account Name.</inlineHelpText>
        <label>Customer Legal Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Legal_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the customer requesting the audit.</inlineHelpText>
        <label>Customer Legal Entity Name</label>
        <referenceTo>CDA_Account__c</referenceTo>
        <relationshipLabel>CDA Requests</relationshipLabel>
        <relationshipName>CDA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Consent_to_Disclose__c</fullName>
        <description>Customer Consent to Disclose</description>
        <inlineHelpText>Consent from the customer to disclose their information is required and the approval document must be uploaded/attached upon submission.</inlineHelpText>
        <label>Customer Consent to Disclose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Address_Other__c</fullName>
        <description>Customer Legal Entity Address Other</description>
        <inlineHelpText>Free Text for Requestor to enter a Customer Account Address if “Other” is specified for Customer Account Name.</inlineHelpText>
        <label>Customer Legal Entity Address Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Address__c</fullName>
        <description>Customer Legal Entity Address (Associated Customer Address )</description>
        <inlineHelpText>Address of customer corresponding to the customer Legal Entity Name selected above.</inlineHelpText>
        <label>Customer Legal Entity Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_City_Other__c</fullName>
        <description>Customer Legal Entity City Other</description>
        <label>Customer Legal Entity City Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Country_Other_PL__c</fullName>
        <description>Customer Legal Entity Country Other</description>
        <label>Customer Legal Entity Country Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Country_Other__c</fullName>
        <description>Customer Legal Entity Country Other</description>
        <label>Customer Legal Entity Country Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Name_Formula__c</fullName>
        <description>this is created by Vikram Singh under Issue-11297</description>
        <formula>IF( OR(ISNULL(Cust_Legal_Entity_Name__c),ISBLANK(Cust_Legal_Entity_Name__c) ), Customer_Legal_Entity_Name_Other__c, Cust_Legal_Entity_Name__r.CDA_Account_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Legal Entity Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Name_Other__c</fullName>
        <description>Customer Legal Entity Name Other.</description>
        <inlineHelpText>Enter customer legal entity here if you cannot find the customer legal entity name in the system.</inlineHelpText>
        <label>Customer Legal Entity Name Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_State_Other_PL__c</fullName>
        <description>Customer Legal Entity State Other</description>
        <label>Customer Legal Entity State Other</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Legal_Entity_Country_Other_PL__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abruzzit</fullName>
                </value>
                <value>
                    <fullName>Abyei Area</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Adrar</fullName>
                </value>
                <value>
                    <fullName>Agadez</fullName>
                </value>
                <value>
                    <fullName>Água Grande</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Ahal Region</fullName>
                </value>
                <value>
                    <fullName>Aichi</fullName>
                </value>
                <value>
                    <fullName>Aimeliik</fullName>
                </value>
                <value>
                    <fullName>Airai</fullName>
                </value>
                <value>
                    <fullName>Akita</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Angaur</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Annobón</fullName>
                </value>
                <value>
                    <fullName>Anseba</fullName>
                </value>
                <value>
                    <fullName>Antananarivo</fullName>
                </value>
                <value>
                    <fullName>Antsiranana</fullName>
                </value>
                <value>
                    <fullName>Aomori</fullName>
                </value>
                <value>
                    <fullName>Apulia</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_State_Other__c</fullName>
        <description>Customer Legal Entity State Other</description>
        <label>Customer Legal Entity State Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_Street_Other__c</fullName>
        <description>Customer Legal Entity Street Other</description>
        <label>Customer Legal Entity Street Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Legal_Entity_ZipCode_Other__c</fullName>
        <description>Customer Legal Entity ZipCode Other</description>
        <label>Customer Legal Entity ZipCode Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <description>System captured the date the CDA document was signed by the external lauthorized signer.</description>
        <label>Customer Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Specified_Vendor_Template__c</fullName>
        <description>Does this request pertain to the Merck Alliance Study initiated before January 2015 and after January 2015 (In the U.S. only)?</description>
        <inlineHelpText>Does this request pertain to the Merck Alliance Study initiated before January 2015 and after January 2015 (In the U.S. only)?</inlineHelpText>
        <label>Customer-Specified Vendor Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Language_Review__c</fullName>
        <label>Date Sent For Language Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Review_For_Report__c</fullName>
        <formula>Text(MONTH( DATEVALUE(Date_Sent_for_Review__c))) &amp; &apos;/&apos; &amp; Text(DAY( DATEVALUE(Date_Sent_for_Review__c))) &amp; &apos;/&apos; &amp; Text(YEAR( DATEVALUE(Date_Sent_for_Review__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent For Review For Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Review__c</fullName>
        <description>Most recent date the CDA document was sent for Review or Signature to the CDA negotiators.</description>
        <inlineHelpText>Date CDA document was last sent for review or signature</inlineHelpText>
        <label>Date Sent for Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_executed_signed_contract_received__c</fullName>
        <description>The date the agreement status was changed to Contract Executed.</description>
        <label>Date executed (signed) contract received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Desc_of_Work_provided_to_Cust_By_Comp__c</fullName>
        <description>Description of Work provided to Customer by Competitor</description>
        <inlineHelpText>Provide a description of the work to be provided to the customer by the competitor.</inlineHelpText>
        <label>Desc of Work provided to Cust By Comp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_work_provided_to_Customer__c</fullName>
        <description>Description of work IQVIA is engaged to provide Customer? updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Provide a description of the work IQVIA is providing to the customer.</inlineHelpText>
        <label>Description of work provided to Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disclosure_Period__c</fullName>
        <inlineHelpText>The number of years for which Confidential Information may be disclosed under the CDA.</inlineHelpText>
        <label>Disclosure Period</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QuintilesIMS_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governing_Law_Display_Text__c</fullName>
        <description>this stores the mapped values of governing law to be displayed on CDA paper.</description>
        <label>Governing Law Display Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <label>Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States, State of California</fullName>
                </value>
                <value>
                    <fullName>United States, State of Connecticut</fullName>
                </value>
                <value>
                    <fullName>United States, State of Delaware</fullName>
                    <default>true</default>
                    <label>United States, State of Delaware</label>
                </value>
                <value>
                    <fullName>United States, State of Kansas</fullName>
                </value>
                <value>
                    <fullName>United States, State of Massachusetts</fullName>
                </value>
                <value>
                    <fullName>United States, State of New Jersey</fullName>
                </value>
                <value>
                    <fullName>United States, State of North Carolina</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia - New South Wales</fullName>
                </value>
                <value>
                    <fullName>Australia - Victoria</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hist_Account_Site__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Account Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Contract_Account_Id__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Contract Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>